# boozook

./: .gitignore  README.md  encode_font.py  extract.py  extract_cat.py  extract_gobcat.py  grid.py  insert_cat.py  insert_ext.py  pyproject.toml  read_ext.py  read_tot.py  read_tot2.py  replace_tot.py
.github/workflows/: main.yml
boozook/: archive.py  font.py  graphics.py  prompt.py  runner.py  text.py
boozook/codex/: cat.py  decomp_tot.py  ext.py  let.py  replace_tot.py  stk.py  stk_compress.py  tot.py
boozook/moved/: gob_font.py  insert_ext.py
pakal/: archive.py  stream.py
pakal/examples/: common.py  installer.py  lpak.py  pakfile.py  stk.py  xarc.py
src/boozook/: __main__.py  archive.py  font.py  graphics.py  grid.py  runner.py  totfile.py
src/boozook/codex/: base.py  cat.py  crypt.py  ext.py  let.py  replace_tot.py  stk.py  stk_compress.py
