[tool.poetry]
name = "boozook"
version = "0.1.0"
description = "Tools for extracting and editing Coktel Vision game resources"
authors = ["BLooperZ <blooperz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pakal = {git = "https://github.com/adventurebrew/pakal.git"}
numpy = "^1.24.2"
pillow = "^10.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
