[tool.poetry]
name = "boozook"
version = "0.1.0"
description = "Tools for extracting and editing Coktel Vision game resources"
authors = ["BLooperZ <blooperz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pakal = {git = "https://github.com/adventurebrew/pakal.git"}
numpy = "^1.24.2"
pillow = "^9.5.0"
prompt-toolkit = "^3.0.41"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"


[tool.poetry.group.release.dependencies]
pyinstaller = "^6.2.0"
pip-licenses = "^4.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
